Devops-script/prod/frontend/service.yml
apiVersion: v1
kind: Service

metadata:
  name: login-frontend
  namespace: login-app

spec:
  type: ClusterIP

  selector:
    app: login-frontend

  ports:
    - name: http
      port: 80
      targetPort: http
      protocol: TCP
