Devops-script/prod/frontend/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress

metadata:
  name: login-frontend
  namespace: login-app

  annotations:
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip

    alb.ingress.kubernetes.io/healthcheck-path: /
    alb.ingress.kubernetes.io/healthcheck-port: traffic-port

    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP":80}]'

spec:

  ingressClassName: alb

  rules:

    - host: login.example.com

      http:

        paths:

          - path: /
            pathType: Prefix

            backend:

              service:
                name: login-frontend

                port:
                  number: 80
